# jetemail-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: send_batch.rs  send_email.rs  with_attachments.rs
src/: batch.rs  client.rs  config.rs  emails.rs  error.rs  lib.rs
tests/: client.rs  emails.rs  error.rs  serialization.rs
